<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:foregroundGravity="center"
                android:contentDescription="@string/pokeImage_desc"
                android:background="#3c5aa6"
                android:id="@+id/pokeImage"/>
        <TextView
            android:layout_below="@+id/pokeImage"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pokeName"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pokeName">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:text="@string/poke_type_prim_header"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeTypeTitle"/>
                <TextView
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeType"/>
                <TextView
                        android:text="@string/poke_type_sec_header"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeTypeTitle2"/>
                <TextView
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeType2"/>
                <TextView
                        android:text="@string/poke_height_header"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeHeightTitle"/>
                <TextView
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeHeight"/>
                <TextView
                        android:text="@string/poke_weight_header"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeWeightTitle"/>
                <TextView
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pokeWeight"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <Button
            android:text="@string/return_button"
            android:onClick="displayPokedexPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/returnButton"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"/>

</android.support.constraint.ConstraintLayout>

